# Axis-AutoML

./: .gitignore  README.md  app.py  main.py  pyproject.toml
mlruns/1/models/m-08aed8022cbe4481a237eb6700b78d65/artifacts/: MLmodel  model.pkl  requirements.txt
mlruns/1/models/m-1de15de92bbe4ff5898c2d722ca239f9/artifacts/: MLmodel
mlruns/1/models/m-3caa04958a1b4dba9c6872886bf46018/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-582251be8efa40b990491ad672b9cc15/artifacts/: MLmodel
mlruns/1/models/m-6d92f809e62a41d393489950ea9800e7/artifacts/: MLmodel
mlruns/1/models/m-70834221fd944c9782c11b8425096022/artifacts/: MLmodel
mlruns/1/models/m-734075f11dbf43259e46b8eb13021fe9/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-74ec49c06b5b4f7b9f86a9e86fa8cada/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-9c45c31bffe54fb585c1202629645f29/artifacts/: MLmodel
mlruns/1/models/m-b357f0f4e4a04c7ba91241ed60faf0fb/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-c1902922637640b79857429feb326f1e/artifacts/: MLmodel
mlruns/1/models/m-c7dcfd7603934b1783fdf6d42b1da6dd/artifacts/: MLmodel
mlruns/1/models/m-cf59c2112b0d42beb008ace714594157/artifacts/: MLmodel  model.pkl
src/: __init__.py  automl_engine.py  eda.py  ensemble.py  evaluator.py  optimizer.py  preprocessing.py  search_space.py  task_detector.py  tracker.py  utils.py
tests/: conftest.py
tests/test_data_processing/: test_task_detector.py
tests/test_models/: test_evaluator.py  test_search_space.py
tests/test_preprocessing/: test_pipeline.py
(+8 files in other folders)
