[project]
name = "spaceship-titanic-automl"
version = "2.0.0"
description = "AutoML pipeline for Spaceship Titanic by mohammed kamal"
requires-python = ">=3.10"
package= false

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.6",
    "mlflow>=2.10",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.3",
    "kaggle>=1.6",
]

